ocultando el row para desktop

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 </div>
                 <div class="col-sm-2"></div>
             </div>
-            <div class="row">
-                <div class="col-xs-12 visible-xs">
+            <div class="row visible-xs">
+                <div class="col-xs-12">
                     <p class="text-center w-700">Llega a tu destino aún más rápido</p>
                 </div>
             </div>
