--- a/index.html
+++ b/index.html
@@ -1,230 +1,52 @@
-
- <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Lab Car</title>
-   <link rel="stylesheet" href="css/bootstrap.min.css">		     <!-- CSS de Bootstrap -->
-   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/main.css">
-   <link rel="icon" href="http://code.nixsiow.com/assets/images/Skills-Icons/Frameworks-Icon.png">
-   </head>
-   <body>
-    <!-- HEADER -->
-    <header>
-        <div class="container-fluid">
-           <div class="row">
-               <div class="col-xs-3 text-center visible-xs-block" id="menu">
-                  <span class="glyphicon glyphicon-align-justify" data-toggle="collapse" data-target="#menu-item" aria-expanded="false" aria-controls="menu-item"></span>
-               </div>
-               <div class="col-xs-9 col-sm-push-1 col-sm-7  text-center" id="logo">
-                  <img src="assets/images/logo.png" alt="Lab Car" width="110px">
-               </div>
-               <div class="col-sm-push-1 col-sm-3 hidden-xs">
-                 <ul class="list-unstyled flex">
-                     <li>Viaja</li>
-                     <li>Conduce</li>
-                     <li>Inicia sesión</li>
-                 </ul>
-               </div>
-           </div>
-           <div class="row collapse" id="menu-item">
-             <div class="col-xs-12 card card-block">
-               <ul class="nav nav-pills nav-stacked">
-                 <li><a href="#">Viaja</a></li>
-                 <li><a href="#">Conduce</a></li>
-                 <li><a href="#">Iniciar Sesión</a></li>
-               </ul>
-             </div>
-           </div>
-        </div>
-    </header>
-    <!-- BANNER -->
-    <section id="banner" class="bg-primary">
-        <div class="container">
-           <div class="row" id="download-app">
-              <div class="col-xs-10 pull-right  col-sm-5 color-lab">
-              <div class="col-xs-12 visible-xs">
-                  <h1><strong>Comienza a viajar con</strong></h1>
-              </div>
-              <div class="col-sm-12 hidden-xs">
-                  <h1><strong>Disfruta del viaje <br>Eres dueño de tu tiempo</strong></h1>
-              </div>
-              <div class="col-sm-4">
-                  <h3>Viaja con</h3>
-              </div>
-              <div class="col-xs-12 col-sm-8" id="logo-blanco">
-                  <img src="assets/images/logo-blanco.png" alt="logo LabCar">
-              </div>
-              <div class="col-sm-12 hidden-xs">
-                <p class="w-700">REGÍSTRATE</p>
-                <div class="line">
-                  <hr>
-                  <span>O bien</span>
-                  <hr>
-                </div>
-              </div>
-              <div class="col-xs-12 btn-download visible-xs">
-                  <button type="button" class="btn btn-default"><strong>Descargar el app</strong></button>
-              </div>
-              <div class="col-sm-12 btn-download hidden-xs">
-                  <button type="button" class="btn btn-default"><strong>Conviértete en conductor</strong></button>
-              </div>
-            </div>
-         </div>
-        </div>
-    </section>
-    <!-- INFO -->
-    <section id="info" class="color-lab">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 visible-xs">
-                    <h3 class="text-center w-700">La nueva app</h3>
-                </div>
-                <div class="col-xs-12 col-sm-6 text-center">
-                    <img src="assets/images/celular.png" alt="app Labcar" width="189px">
-                </div>
-                <div class="col-sm-4 hidden-xs">
-                  <h3 class="w-700">Descarga la nueva app</h3>
-                  <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
-                  <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
-                </div>
-                <div class="col-sm-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 visible-xs">
-                    <p class="text-center w-700">Llega a tu destino aún más rápido</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- DRIVER -->
-    <section id="driver">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-11 col-sm-push-1 col-sm-11">
-                    <h3 class="w-700">Conduce cuando quieras</h3>
-                </div>
-                <div class="col-xs-1 hidden-xs"></div>
-                <div class="col-xs-11 col-sm-push-1 col-sm-11">
-                    <p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
-                </div>
-                <div class="col-xs-1 hidden-xs"></div>
-                <div class="col-xs-11 col-sm-push-1 col-sm-11">
-                    <button type="button" class="btn color-lab w-">Conviértete en conductor</button>
-                </div>
-                <div class="col-xs-1 hidden-xs"></div>
-            </div>
-        </div>
-    </section>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lab Car</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css"><!-- CSS de Bootstrap -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="http://code.nixsiow.com/assets/images/Skills-Icons/Frameworks-Icon.png">
+  </head>
+  <body>
     <!-- TARIFA  -->
     <section id="rate" class="color-lab">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <h3 class="w-700">Tarifas</h3>
-                    <p>Consulta las tarifas LabCar aquí </p>
-                    <div class="box-partida">
-                        <img src="assets/images/circulo.png" alt="punto partida">
-                        <input type="text" class="form-input color-lab" id="input-partida" placeholder="Ingrese punto de partida">
-                    </div>
-                    <div class="box-destino">
-                        <img src="assets/images/flecha.png" alt="punto destino">
-                        <input type="text" class="form-input color-lab" id="input-destino" placeholder="Ingrese un destino">
-                    </div>
-                    <div class="box-btn text-center">
-                        <button type="button" id="trazar-ruta" class="btn btn-default w-700">!TRAZAR RUTA!</button>
-                    </div>
-                </div>
-                <div class="col-sm-6 hidden-xs">
-                    <div id="map">
-
-                    </div>
-                </div>
-                <div class="col-xs-12" id="tarifa">
-
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6">
+            <h3 class="w-700">Tarifas</h3>
+            <p>Consulta las tarifas LabCar aquí </p>
+            <form id="form">
+              <div>
+                <img src="assets/images/circulo.png" alt="punto partida">
+                <input type="text" class="form-input color-lab" id="input-origen" placeholder="Ingrese punto de partida">
+              </div>
+              <div>
+                <img src="assets/images/flecha.png" alt="punto destino">
+                <input type="text" class="form-input color-lab" id="input-destino" placeholder="Ingrese un destino">
+              </div>
+              <div class="box-btn text-center">
+                <button type="submit" id="trazar-ruta" class="btn btn-default w-700">!TRAZAR RUTA!</button>
+              </div>
+            </form>
+            <div id="tarifa"></div>
           </div>
+          <div class="col-sm-6 hidden-xs">
+            <div class="contentMap">
+              <div id="map"></div>
+            </div>
+          </div>
+          
         </div>
+      </div>
     </section>
-    <!-- FOOTER -->
-    <footer class="bg-gris">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                  <img src="assets/images/logo-blanco.png" alt="logo LabCar">
-                  <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 hidden-xs" id="footer-first">
-                    <ul class="list-unstyled flex">
-                        <li><span class="icon-facebook"></span></li>
-                        <li><span class="icon-twitter"></span></li>
-                        <li><span class="icon-linkedin"></span></li>
-                        <li><span class="icon-apple"></span></li>
-                        <li><span class="icon-youtube"></span></li>
-                    </ul>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <ul class="list-unstyled">
-                        <li>Viaja</li>
-                        <li>Conduce</li>
-                        <li>Ciudades</li>
-                        <li>Tarifas</li>
-                        <li>Entregas</li>
-                        <li>Cómo funciona</li>
-                        <li>Países</li>
-                        <li>Seguridad</li>
-                    </ul>
-                </div>
-                <div class="col-sm-3 hidden-xs">
-                  <ul class="list-unstyled">
-                      <li>Oportunidades</li>
-                      <li>Nuestra historia</li>
-                      <li>API de LabCar</li>
-                      <li>Eventos</li>
-                      <li>Desarrolladores</li>
-                      <li>Servicios</li>
-                      <li>Laboratoria</li>
-                      <li>Coders</li>
-                  </ul>
-                </div>
-                <div class="col-xs-3 visible-xs-block" id="footer-icons">
-                    <ul class="list-unstyled flex">
-                        <li><span class="icon-facebook"></span></li>
-                        <li><span class="icon-twitter"></span></li>
-                        <li><span class="icon-linkedin"></span></li>
-                        <li><span class="icon-apple"></span></li>
-                        <li><span class="icon-youtube"></span></li>
-                    </ul>
-                </div>
-                <div class="col-xs-3 col-sm-3 text-center" id="footer-logo">
-                    <img src="assets/images/google-play.png" class="imagen-responsive" alt="google play">
-                    <img src="assets/images/app-store.png" class="imagen-responsive" alt="app store">
-                </div>
-            </div>
-          <div class="row">
-            <div class="col-xs-12 text-center">
-              <hr>
-              <p>&copy; 2017 LabCar technologies Inc.</p>
-            </div>
-          </div>
-        </div>
-    </footer>
-
-
-
-      <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-      <!-- Incluir todos tus scripts apartir de este punto -->
-
-       <script src="js/app.js"></script>
-       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPYOLE28FgNpPeQ7sIlgS9saT5h6p5jys&callback=initMap&libraries=places"> </script>
-       <script src="js/bootstrap.min.js"></script>
-       </script>
-   </body>
-   </html>
+    <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Incluir todos tus scripts apartir de este punto -->
+    <script src="js/app.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPYOLE28FgNpPeQ7sIlgS9saT5h6p5jys&callback=initMap&libraries=places"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
