cambiando clases por elementos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <img src="assets/images/logo-blanco.png" alt="logo LabCar">
               </div>
               <div class="col-sm-12 hidden-xs">
-                <p class="w-700">REGÍSTRATE</p>
+                <p><strong>REGÍSTRATE<strong></p>
                 <div class="line">
                   <hr>
                   <span>O bien</span>
@@ -82,13 +82,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 visible-xs">
-                    <h3 class="text-center w-700">La nueva app</h3>
+                    <h3 class="text-center"><strong>La nueva app</strong></h3>
                 </div>
                 <div class="col-xs-12 col-sm-6 text-center">
                     <img src="assets/images/celular.png" alt="app Labcar" width="189px">
                 </div>
                 <div class="col-sm-4 hidden-xs">
-                  <h3 class="w-700">Descarga la nueva app</h3>
+                  <h3><strong>Descarga la nueva app</strong></h3>
                   <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
                   <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
                 </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="row visible-xs">
                 <div class="col-xs-12">
-                    <p class="text-center w-700">Llega a tu destino aún más rápido</p>
+                    <p class="text-center"><strong>Llega a tu destino aún más rápido</strong></p>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-11 col-sm-push-1 col-sm-11">
-                    <h3 class="w-700">Conduce cuando quieras</h3>
+                    <h3><strong>Conduce cuando quieras</strong></h3>
                 </div>
                 <div class="col-xs-1 hidden-xs"></div>
                 <div class="col-xs-11 col-sm-push-1 col-sm-11">
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <h3 class="w-700">Tarifas</h3>
+                    <h3><strong>Tarifas</strong></h3>
                     <p>Consulta las tarifas LabCar aquí </p>
                     <div class="box-partida">
                         <img src="assets/images/circulo.png" alt="punto partida">
@@ -136,7 +136,7 @@
                         <input type="text" class="form-input color-lab" id="input-destino" placeholder="Ingrese un destino">
                     </div>
                     <div class="box-btn text-center">
-                        <button type="button" id="trazar-ruta" class="btn btn-default w-700">!TRAZAR RUTA!</button>
+                        <button type="button" id="trazar-ruta" class="btn btn-lg">!TRAZAR RUTA!</button>
                     </div>
                 </div>
                 <div class="col-sm-6 hidden-xs">
