--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <img src="assets/images/logo-blanco.png" alt="logo LabCar">
             </div>
             <div class="col-sm-12 hidden-xs">
-              <p><strong>REGÍSTRATE<strong></p>
+              <p><strong>REGÍSTRATE</strong></p>
               <div class="line">
                   <hr>
                   <span>O bien</span>
