--- a/index.html
+++ b/index.html
@@ -173,26 +173,26 @@
                 </div>
                 <div class="col-xs-6 col-sm-3">
                     <ul class="list-unstyled">
-                        <li>Viaja</li>
-                        <li>Conduce</li>
-                        <li>Ciudades</li>
-                        <li>Tarifas</li>
-                        <li>Entregas</li>
-                        <li>Cómo funciona</li>
-                        <li>Países</li>
-                        <li>Seguridad</li>
+                        <li><a href="#">Viaja</a></li>
+                        <li><a href="#">Conduce</a></li>
+                        <li><a href="#">Ciudades</a></li>
+                        <li><a href="#">Tarifas</a></li>
+                        <li><a href="#">Entregas</a></li>
+                        <li><a href="#">Cómo funciona</a></li>
+                        <li><a href="#">Países</a></li>
+                        <li><a href="#">Seguridad</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3 hidden-xs">
                     <ul class="list-unstyled">
-                        <li>Oportunidades</li>
-                        <li>Nuestra historia</li>
-                        <li>API de LabCar</li>
-                        <li>Eventos</li>
-                        <li>Desarrolladores</li>
-                        <li>Servicios</li>
-                        <li>Laboratoria</li>
-                        <li>Coders</li>
+                        <li><a href="#">Oportunidades</a></li>
+                        <li><a href="#">Nuestra historia</a></li>
+                        <li><a href="#">API de LabCar</a></li>
+                        <li><a href="#">Eventos</a></li>
+                        <li><a href="#">Desarrolladores</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Laboratoria</a></li>
+                        <li><a href="#">Coders</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-3 visible-xs-block" id="footer-icons">
@@ -217,13 +217,9 @@
             </div>
         </div>
     </footer>
-
-
-
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Incluir todos tus scripts apartir de este punto -->
-
     <script src="js/app.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPYOLE28FgNpPeQ7sIlgS9saT5h6p5jys&callback=initMap&libraries=places">
     </script>
