--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Lab Car</title>
-   <link rel="stylesheet" href="css/bootstrap.min.css">		     <!-- CSS de Bootstrap -->
    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/main.css">
@@ -15,32 +14,29 @@
    <body>
     <!-- HEADER -->
     <header>
+      <nav>
         <div class="container-fluid">
-           <div class="row">
-               <div class="col-xs-3 text-center visible-xs-block" id="menu">
-                  <span class="glyphicon glyphicon-align-justify" data-toggle="collapse" data-target="#menu-item" aria-expanded="false" aria-controls="menu-item"></span>
-               </div>
-               <div class="col-xs-9 col-sm-push-1 col-sm-7  text-center" id="logo">
-                  <img src="assets/images/logo.png" alt="Lab Car" width="110px">
-               </div>
-               <div class="col-sm-push-1 col-sm-3 hidden-xs">
-                 <ul class="list-unstyled flex">
-                     <li>Viaja</li>
-                     <li>Conduce</li>
-                     <li>Inicia sesión</li>
-                 </ul>
-               </div>
-           </div>
-           <div class="row collapse" id="menu-item">
-             <div class="col-xs-12 card card-block">
-               <ul class="nav nav-pills nav-stacked">
-                 <li><a href="#">Viaja</a></li>
-                 <li><a href="#">Conduce</a></li>
-                 <li><a href="#">Iniciar Sesión</a></li>
-               </ul>
-             </div>
-           </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-push-1 col-sm-5">
+              <div class="col-xs-2 visible-xs text-center navbar-header">
+                <span class="glyphicon glyphicon-menu-hamburger navbar-toggle" data-toggle="collapse" data-target="#menu-item" aria-expanded="false" aria-controls="menu-item"></span>
+              </div>
+              <div class="col-xs-10 col-sm-12 text-center" id="logo">
+                <img src="assets/images/logo.png" alt="Lab Car" width="110px">
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6" >
+              <div class="collapse navbar-collapse"id="menu-item">
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">Viaja</a></li>
+                  <li><a href="#">Conduce</co></a></li>
+                  <li><a href="#">Inicia Sesión</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+      </nav>
     </header>
     <!-- BANNER -->
     <section id="banner" class="bg-primary">
