--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
               <div class="col-sm-12 hidden-xs">
                   <h1><strong>Disfruta del viaje <br>Eres dueño de tu tiempo</strong></h1>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4 hidden-xs">
                   <h3>Viaja con</h3>
               </div>
               <div class="col-xs-12 col-sm-8" id="logo-blanco">
                   <img src="assets/images/logo-blanco.png" alt="logo LabCar">
               </div>
               <div class="col-sm-12 hidden-xs">
-                <p class="w-700">REGÍSTRATE</p>
+                <p class="w-500">REGÍSTRATE</p>
                 <div class="line">
                   <hr>
                   <span>O bien</span>
