add flex in footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <li><a href="#">Coders</a></li>
                     </ul>
                 </div>
-                <div class="col-xs-3 visible-xs-block" id="footer-icons">
+                  <div class="col-xs-3 visible-xs" id="footer-icons">
                     <ul class="list-unstyled flex">
                         <li><span class="icon-facebook"></span></li>
                         <li><span class="icon-twitter"></span></li>
@@ -201,7 +201,7 @@
                         <li><span class="icon-youtube"></span></li>
                     </ul>
                 </div>
-                <div class="col-xs-3 col-sm-3 text-center" id="footer-logo">
+                <div class="col-xs-3 col-sm-3 " id="footer-logo">
                     <img src="assets/images/google-play.png" class="imagen-responsive" alt="google play">
                     <img src="assets/images/app-store.png" class="imagen-responsive" alt="app store">
                 </div>
